--- a/local.yml
+++ b/local.yml
@@ -17,18 +17,15 @@
       fail: msg="SYSTEM LIVE MUSI BYC 64-bitowy"
       when: ansible_architecture != "x86_64"
 
-  #  - pause:
-  #      prompt: 'AKTUALNIE INSTALACJA NIE DZIALA PRAWIDLOWO - PROSZE NIE UZYWAC - NETIS'
-  #      echo: yes
+#    - pause:
+#        prompt: 'PODAJ WERSJE KASY DO INSTALACJI: "xkasnet 2.2.14+ (18) / xkasnet 2.2.16 premium (20)" wybierz i wpisz numer: 18 lub 20'
+#        echo: yes
+#      register: ubuntu_wer
 
-
-    - pause:
-        prompt: 'PODAJ WERSJE KASY DO INSTALACJI: "xkasnet 2.2.14+ (18) / xkasnet 2.2.16 premium (20)" wybierz i wpisz numer: 18 lub 20'
-        echo: yes
-      register: ubuntu_wer
+#wzorzecKASY: "kasa_wzor_czysty_{{ ubuntu_wer.user_input }}.04.tar.gz"
 
     - set_fact:
-        wzorzecKASY: "kasa_wzor_czysty_{{ ubuntu_wer.user_input }}.04.tar.gz"
+        wzorzecKASY: "kasa_wzor_czysty_18.04.tar.gz"
 
     - name: Wykrywam dyski
       set_fact:
