--- a/kasa.yml
+++ b/kasa.yml
@@ -13,7 +13,7 @@
 #  shell: "echo 'LOG_NOTICE' > {{ montowanie }}/home/kasa/LOGLEVEL"
 
 - name: run-config
-  shell: "touch > {{ montowanie }}/home/kasa/.run-config"
+  shell: "touch {{ montowanie }}/home/kasa/.run-config"
 
 - name: config
   shell: "echo 'kasa.config-1024x768' > {{ montowanie }}/home/kasa/CONFIG"
