--- a/kasa.yml
+++ b/kasa.yml
@@ -12,8 +12,15 @@
 #- name: loglevel
 #  shell: "echo 'LOG_NOTICE' > {{ montowanie }}/home/kasa/LOGLEVEL"
 
+#- name: run-config
+#  shell: "touch {{ montowanie }}/home/kasa/.run-config"
+
 - name: run-config
-  shell: "touch {{ montowanie }}/home/kasa/.run-config"
+  file:
+    state: file
+    path: "{{ montowanie }}/home/kasa/.run-config"
+    owner: kasa
+    group: kasa
 
 - name: config
   shell: "echo 'kasa.config-1024x768' > {{ montowanie }}/home/kasa/CONFIG"
