--- a/kasa.yml
+++ b/kasa.yml
@@ -17,7 +17,7 @@
 
 - name: run-config
   file:
-    state: file
+    state: touch
     path: "{{ montowanie }}/home/kasa/.run-config"
     owner: kasa
     group: kasa
