--- a/kasa.yml
+++ b/kasa.yml
@@ -7,7 +7,7 @@
   command: chroot "{{ montowanie }}" apt update
 
 - name: apt instalacja pakietów
-  command: chroot "{{ montowanie }}" apt install --yes xkasnet-client-2.2.17=2.2.17r202208221514~jammy-1 xkasnet-libnative-jni-2.2.17=2.2.17r202208221514~jammy-1 x-pos-launcher x-pos-tweaks-no-cursor kasnet-server-2.1.335 kasnet-src-2.1.335 kasnet-config-2.1.335 kasnet-libwaga-2.1.335 kasnet-tools-2.1.335
+  command: chroot "{{ montowanie }}" apt install --yes xkasnet-client-2.2.17=2.2.17r202208240904~jammy-1 xkasnet-libnative-jni-2.2.17=2.2.17r202208240904~jammy-1 x-pos-launcher kasnet-server-2.1.335 kasnet-src-2.1.335 kasnet-config-2.1.335 kasnet-libwaga-2.1.335 kasnet-tools-2.1.335
 
 - name: run-config
   shell: "touch {{ montowanie }}/home/kasa/.run-config"
