--- a/kasa.yml
+++ b/kasa.yml
@@ -28,15 +28,16 @@
     - 'openssl_conf = default_conf'
 
 - name: zmiana configa openssl2
-  blockinfile:
-    path: "{{ montowanie }}/etc/ssl/openssl.cnf"
-    marker: "#"
-    insertafter: "CipherString = DEFAULT:@SECLEVEL=2"
-    block: |
-      [ default_conf ]
-      ssl_conf = ssl_sect
-      [ssl_sect]
-      system_default = ssl_default_sect
-      [ssl_default_sect]
-      MinProtocol = TLSv1.2
-      CipherString = DEFAULT:@SECLEVEL=0
+  lineinfile:
+    state: present
+    dest: "{{ montowanie }}/etc/ssl/openssl.cnf"
+    insertafter: 'CipherString = DEFAULT:@SECLEVEL=2'
+    line: "{{ item }}"
+  with_items:
+    - '[ default_conf ]'
+    - 'ssl_conf = ssl_sect'
+    - '[ssl_sect]'
+    - 'system_default = ssl_default_sect'
+    - '[ssl_default_sect]'
+    - 'MinProtocol = TLSv1.2'
+    - 'CipherString = DEFAULT:@SECLEVEL=0'
