--- a/local.yml
+++ b/local.yml
@@ -99,5 +99,9 @@
       import_tasks: kasa.yml
       when: ubuntu_wer.user_input == "22"
 
+    - name: instalacja kasy24
+      import_tasks: kasa.yml
+      when: ubuntu_wer.user_input == "24"
+      
     - debug:
         msg: "Instalacja zostala zakonczona. Zrestaruj komputer."
