--- a/kasa24.yml
+++ b/kasa24.yml
@@ -25,7 +25,7 @@
   shell: "chmod +x {{ montowanie }}/etc/init.d/df_daemon"
 
 - name:  Intel Graphics w xorg.conf.d
-  ansible.builtin.blockinfile:
+  blockinfile:
     path: "{{ montowanie }}/usr/share/X11/xorg.conf.d/80-intel.conf"
     marker: "# {mark} ANSIBLE INTEL GRAPHICS"
     block: |
