--- a/kasa24.yml
+++ b/kasa24.yml
@@ -33,7 +33,7 @@
           Identifier "Intel Graphics"
           Driver "Intel"
           Option "DRI" "3"
-          Option      "AccelMethod" "uxa"
+#          Option      "AccelMethod" "uxa"
       EndSection
     create: yes
     backup: yes
