--- a/kasa24.yml
+++ b/kasa24.yml
@@ -33,6 +33,8 @@
           Identifier "Intel Graphics"
           Driver "Intel"
           Option "DRI" "3"
+          #ohaszowac w przypadku intel core do 6 gen - JL
+          #Option      "AccelMethod" "uxa"
       EndSection
     create: yes
     backup: yes
@@ -45,6 +47,15 @@
     line: "{{ item }}"
   with_items:
     - 'openssl_conf = default_conf'
+
+- name: zmiana configa openssl1
+  lineinfile:
+    state: present
+    dest: "{{ montowanie }}/etc/ssl/openssl.cnf"
+    insertafter: 'providers = provider_sect'
+    line: "{{ item }}"
+  with_items:
+    - 'ssl_conf = ssl_sect'
 
 #- name: zmiana configa openssl2
 #  lineinfile:
@@ -68,6 +79,9 @@
     backup: yes
     insertafter: "CipherString = DEFAULT:@SECLEVEL=2"
     block: |
+      [ssl_sect]
+      system_default = system_default_sect
+         
       [ default_conf ]
       ssl_conf = ssl_sect
       [ssl_sect]
